# memcontext

./: .dockerignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GOVERNANCE_AUDIT.md  LICENSE  LIPI.md  README.md  SECURITY.md  TRUST_GOVERNANCE_PLAN.md  install.sh  pyproject.toml
.claude/: settings.json
demo/: __init__.py  run_demo.py  scenario.py
docs/: DEEPENINGS.md  retrieval_architecture.md
evals/: __init__.py  amb_provider.py  amb_runner.py  amb_setup.md  ceiling.py  ceiling_rawtext.py  latency_bench.py  longmemeval.py  longmemeval_prompts.py  mem_build_db.py  mem_score_db.py  mem_score_door.py  merge_chunks.py  metrics.py  quickcheck.py  reader.py  run_chunk.py  run_smoke30.py  runner.py
memcontext/: __init__.py  admission.py  anomaly.py  attribute_key.py  authz.py  benchmark_bridge.py  brain.py  chains.py  chatgpt_custom_gpt.md  claims.py  cli.py  client_config.py  consolidate.py  digests.py  entities.py  entity_graph.py  enumeration.py  event_bus.py  event_frames.py  event_tuples.py  extraction_queue.py  extractors.py  forgetting.py  formatting.py  http_server.py  importance.py  life_events.py  mcp_oauth.py  mcp_server.py  mcp_tools.py  on_new_turn.py  payloads.py  predicate_packs.py  procedural.py  profiles.py  projections.py  provenance.py  relay.py  retention.py  retrieval.py  (+13 more)
memcontext_extension/: background.js  chatgpt_bridge.css  chatgpt_bridge.js  manifest.json  popup.html  popup.js
results/: README.md  proof_amb_real_cases_tdd.py  proof_enum_content_aware.py  proof_fractureA_cross_session_resolved.py  proof_fusion_master.py  proof_retrieval_footguns.py  proof_serve_completeness.py  proof_temporal_grounding.py
tests/: conftest.py  proof_fractureB_identity.py  test_admission.py  test_amb_memcontext_adapter.py  test_amb_runner.py  test_async_write_path.py  test_attribute_key.py  test_behavioral_prompts.py  test_benchmark_bridge.py  test_brain_across_cross_session.py  test_cardinality_supersession.py  test_chains.py  test_claims.py  test_cli.py  test_client_config.py  test_connectedness.py  test_cycle_a_entity_graph.py  test_cycle_b_temporal.py  test_cycle_c_consolidation.py  test_cycle_d_working_context.py  (+62 more)
(+74 files in other folders)
