[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcontext"
version = "0.1.0"
description = "Domain-agnostic memory and context substrate — claim lifecycle, supersession, projections, retrieval"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "structlog>=24.0",
    "click>=8.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
    "requests>=2.28",
]
mcp = [
    "mcp>=1.0",
]
reader-openrouter = [
    "requests>=2.28",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
memcontext = "memcontext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["memcontext"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
