[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcontext"
version = "0.2.0"
description = "Domain-agnostic memory and context substrate — claim lifecycle, supersession, projections, retrieval, trust & governance"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "structlog>=24.0",
    "click>=8.0",
]

[project.optional-dependencies]
embeddings = [
    "FlagEmbedding>=1.2.10",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "requests>=2.28",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
memcontext = "memcontext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["memcontext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_embedder: exercises the real local embedding model; skips honestly if it can't load",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
